--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           </label>
         </div>
 
-        <p>Favorite accessory?</p>
+        <p>What is your favorite accessory?</p>
         <div class="radio">
           <label>
             <input type="radio" name="question3" value="glasses" checked>
@@ -117,8 +117,9 @@
 
         <button type="submit" class="btn">Go!</button>
       </form>
+      <div id="output">
 
-
+      </div>
     </div>
   </body>
 </html>
