--- a/index.html
+++ b/index.html
@@ -3,123 +3,153 @@
   <head>
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
-    <script src="js/jquery-3-4-1.js"></script>
+    <script src="js/jquery-3.4.1.js"></script>
     <script src="js/scripts.js"></script>
     <title>Character Quiz</title>
   </head>
   <body>
     <div class="container">
-      <h1>Which Bob's Burgers character are you?</h1>
-      <form id="character">
-        <p>Who is your favorite secondary character?</p>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question1" value="Gloria" checked>
-            Gloria
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question1" value="Regular sized Rudy">
-            Regular sized Rudy
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question1" value="Jimmy Pesto, Jr.">
-            Jimmy Presto, Jr.
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question1" value="Courtney Wheeler">
-            Courtney Wheeler
-          </label>
-        </div>
-
-        <p>What is your favorite burger topping?</p>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question2" value="pickles" checked>
-            pickles
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question2" value="cheese">
-            cheese
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question2" value="peanut butter">
-            peanut butter
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question2" value="onion rings">
-            onion rings
-          </label>
-        </div>
-
-        <p>What is your favorite accessory?</p>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question3" value="glasses" checked>
-            glasses
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question3" value="bunny ears">
-            bunny ears
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question3" value="hair barrette">
-            hair barrette
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question3" value="fart machine">
-            fart machine
-          </label>
-        </div>
-
-        <p>What is your favorite activity?</p>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question4" value="singing" checked>
-            singing
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question4" value="pranks">
-            pranks
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question4" value="dancing">
-            dancing
-          </label>
-        </div>
-        <div class="radio">
-          <label>
-            <input type="radio" name="question4" value="playing the keyboard">
-            playing the keyboard
-          </label>
-        </div>
-
-        <button type="submit" class="btn">Go!</button>
-      </form>
-      <div id="output">
-
+      <div class="jumbotron">
+        <h1>Which Bob's Burgers character are you?</h1>
+        <p>Take our quiz to find out.</p>
       </div>
-    </div>
+
+        <form id="character">
+          <div class="panel panel-default">
+            <div class="panel-heading">
+              <h2 class="panel-title">Who is your favorite secondary character?</h2>
+            </div>
+            <div class="panel-body">
+              <div class="radio">
+                <label>
+                  <input type="radio" name="question1" value="Gloria" checked>
+                  Gloria
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="question1" value="Regular sized Rudy">
+                  Regular sized Rudy
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="question1" value="Jimmy Pesto, Jr.">
+                  Jimmy Presto, Jr.
+                </label>
+              </div>
+              <div class="radio">
+                <label>
+                  <input type="radio" name="question1" value="Courtney Wheeler">
+                  Courtney Wheeler
+                </label>
+              </div>
+            </div>
+
+            <div class="panel panel-default">
+              <div class="panel-heading">
+                <h2 class="panel-title">What is your favorite burger topping?</h2>
+              </div>
+              <div class="panel-body">
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="question2" value="pickles" checked>
+                    pickles
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="question2" value="cheese">
+                    cheese
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="question2" value="peanut butter">
+                    peanut butter
+                  </label>
+                </div>
+                <div class="radio">
+                  <label>
+                    <input type="radio" name="question2" value="onion rings">
+                    onion rings
+                  </label>
+                </div>
+              </div>
+
+              <div class="panel panel-default">
+                <div class="panel-heading">
+                  <h2 class="panel-title">What is your favorite accessory?</h2>
+                </div>
+                <div class="panel-body">
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="question3" value="glasses" checked>
+                      glasses
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="question3" value="bunny ears">
+                      bunny ears
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="question3" value="hair barrette">
+                      hair barrette
+                    </label>
+                  </div>
+                  <div class="radio">
+                    <label>
+                      <input type="radio" name="question3" value="fart machine">
+                      fart machine
+                    </label>
+                  </div>
+                </div>
+
+                <div class="panel panel-default">
+                  <div class="panel-heading">
+                    <h2 class="panel-title">What is your favorite activity?</h2>
+                  </div>
+                  <div class="panel-body">
+                    <div class="radio">
+                      <label>
+                        <input type="radio" name="question4" value="singing" checked>
+                        singing
+                      </label>
+                    </div>
+                    <div class="radio">
+                      <label>
+                        <input type="radio" name="question4" value="pranks">
+                        pranks
+                      </label>
+                    </div>
+                    <div class="radio">
+                      <label>
+                        <input type="radio" name="question4" value="dancing">
+                        dancing
+                      </label>
+                    </div>
+                    <div class="radio">
+                      <label>
+                        <input type="radio" name="question4" value="playing the keyboard">
+                        playing the keyboard
+                      </label>
+                    </div>
+                  </div>
+
+          <button type="submit" class="btn">Go!</button>
+        </form>
+      </div>
+      <div class="panel panel-default">
+        <div class="panel-heading">
+          <h2 class="panel-title">Your Bob's Burgers character is:</h2>
+        </div>
+        <div class="panel-body">
+          <div id="output">
+
+          </div>
+      </div>
   </body>
 </html>
